--- a/static/css/reset.css
+++ b/static/css/reset.css
@@ -7,5 +7,13 @@
 }
 
 body {
-  min-height: 100vh;
+  font-family: sans-serif;
+}
+
+button {
+  font-family: inherit;
+  background: none;
+  outline: none;
+  border: none;
+  cursor: pointer;
 }
