--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,23 @@
+{% from "components/sidebar-tool.html" import sidebar_tool with context %}
+
 <!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Holy Sheet</title>
-    <link
-      rel="stylesheet"
-      href="{{ url_for('static', filename='css/styles.css') }}"
-    />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/styles.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/macro.css') }}" />
+    <script src="{{ url_for('static', filename='js/main.js') }}" defer></script>
   </head>
-
   <body>
-    <h1>Holy Sheeeeeeee yutt!</h1>
+    <div class="main-layout">
+      <div class="sidebar-primary">{{ sidebar_tool('1') }} {{ sidebar_tool('2') }}</div>
+      <div class="sidebar-secondary"></div>
+      <div class="platform">
+        <h1>Platform</h1>
+      </div>
+    </div>
   </body>
 </html>
